--- a/doc/news/2014-01-12.md
+++ b/doc/news/2014-01-12.md
@@ -1,7 +1,10 @@
 ---
 title: Urubu 0.1 released
 layout: page 
-date: 2014-01-22
+date: 2014-01-12
 ---
 
 Introducing Urubu, a Python-based micro CMS for static websites.
+Read about [the rationale behind it][rationale].
+
+[rationale]: http://www.jandecaluwe.com/blog/i-dont-like-blogs.html
