--- a/doc/news/2014-02-27.md
+++ b/doc/news/2014-02-27.md
@@ -1,7 +1,8 @@
 ---
 title: Urubu 0.3 released
 layout: page 
-date: 2014-02-26
+date: 2014-02-27
 ---
 
 This release adds markdown support for front-matter attributes.
+[Read more&nbsp;&raquo;](/manual/structure.html#markdown-in-attributes)
