--- a/doc/news/2015-11-22.md
+++ b/doc/news/2015-11-22.md
@@ -16,7 +16,7 @@ warning is generated, just like for references to undefined pages (Issue #30).
 way the page content can be used by other pages, but no html is generated for
 the page itself.
 
-In addition, an significant effort was put into development robustness. In
+In addition, a significant effort was put into development robustness. In
 particular, a regression test suite has been added. This is based on `py.test`
 and `tox`, so that both Python 2.7 and 3.4 are verified. 
 
