--- a/doc/news/2016-01-01.md
+++ b/doc/news/2016-01-01.md
@@ -11,3 +11,7 @@ you can use it to define a default `layout`, or a specific `layout`
 for pages in a certain directory.
 
 Read more in the manual: [/manual/hooks#The process_info hook].
+
+There is also a new `keep_files` configuration attribute, that lets you
+preserve files that would otherwise be ignored.  See the
+[documentation][/manual/structure#_siteyml].
